--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
 .card {
     background-color: rgb(255, 189, 90);
     border-radius: 20px;
-    margin-left: 10px;
+    margin: 10px;
     height: 200px;
     flex: 1;
     transition: .3s all ease;
