added styles to recipe pages

--- a/styles.css
+++ b/styles.css
@@ -43,4 +43,53 @@
 img {
     width: 475px;
     height: 300px;
+    border-radius: 20px;
+    margin: 10px;
+}
+
+.description {
+    flex: 1;
+    border: 10px solid rgb(255, 189, 90);
+    border-radius: 20px;
+    margin: 10px;
+    padding: 20px;
+    text-align: justify;
+}
+
+.ul {
+    flex: 1;
+    border: 10px solid rgb(255, 86, 86);
+    border-radius: 20px;
+    margin: 10px;
+    padding: 20px;
+}
+
+.ol {
+    flex: 1;
+    border: 10px solid rgb(255, 86, 86);
+    border-radius: 20px;
+    margin: 10px;
+    padding: 20px;
+}
+
+.vert {
+    display: flex;
+}
+
+.separator {
+    background-color: rgb(78, 78, 255);
+    color: black;
+    text-align: center;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+ol li {
+    margin: 20px;
+    text-align: justify;
+}
+
+ul li {
+    margin: 10px;
 }
